--- a/02-partitions-and-consumers/src/main/resources/application.properties
+++ b/02-partitions-and-consumers/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 meter.interval=2
-meter.area = "north" 
-meter.topic = "meter.reading"
+meter.area = north 
+meter.topic = meter.reading
 spring.kafka.consumer.group-id=group-1
 spring.kafka.consumer.auto-offset-reset=earliest
 
