Remove configuration class, add meterId to readings

--- a/02-embedded-kafka/src/main/resources/application.properties
+++ b/02-embedded-kafka/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 meter.interval=2
 meter.area = north 
 meter.topic = meter.reading
+meter.id = meter-1
 spring.kafka.consumer.group-id=group-1
 spring.kafka.consumer.auto-offset-reset=earliest
 
