Override id, area and interval from command line

--- a/02-embedded-kafka/src/main/resources/application.properties
+++ b/02-embedded-kafka/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-meter.interval=2
+meter.interval=10
 meter.area = north 
 meter.topic = meter.reading
 meter.id = meter-1
 spring.kafka.consumer.group-id=group-1
 spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.bootstrap-servers=localhost:9092
 
 
