Updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@
 # BlueJ files
 *.ctxt
 
+# vscode files
+*/.vscode/**
+*/.settings
+
+.classpath
+.project
+
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
