--- a/03-partitions-and-topics/pom.xml
+++ b/03-partitions-and-topics/pom.xml
@@ -14,7 +14,8 @@
 	<name>ConsumptionTracker</name>
 	<description>Average consumption readings</description>
 	<properties>
-		<java.version>1.8</java.version>
+		  <maven.compiler.source>1.8</maven.compiler.source>
+          <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
